# rllib_multi_agent_self_play_example

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
gridman/: README.md  gridman_multiagent.yaml
rllib_multi_agent_example/: gap_agent.py  simple_conv_agent.py
rllib_multi_agent_self_play_example/: gap_agent.py  simple_conv_agent.py
util/: generate_level_images.py
