[tool.poetry]
name = "rllib_multi_agent_self_play_example"
version = "0.1.0"
description = ""
authors = ["Bam4d <chrisbam4d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ray = {extras = ["rllib"], version = "^2.1.0"}
griddly = "^1.5.1"
torch = "1.12.1"
protobuf = "3.20.*"
wandb = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
